UIUX-837: fix flex list more column overflow

--- a/sugarcrm/styleguide/less/sugar-specific/datatables.less
+++ b/sugarcrm/styleguide/less/sugar-specific/datatables.less
@@ -382,6 +382,9 @@ FLEXLIST GENERIC */
 
   /*DUPLICATES*/
   table.dataTable.duplicates {
+    thead > tr > th:last-child {
+      position: absolute;
+    }
     tbody > tr > td:last-child .list {
       overflow: visible;
     }
@@ -782,8 +785,11 @@ FLEXLIST GENERIC */
 }
 
 .subpanel .flex-list-view table.dataTable {
-  tbody > tr > td {
+  &> tbody > tr > td {
     border-bottom-width: 0;
+    &:last-child {
+      position: absolute;
+    }
   }
   &> thead > tr > th:first-child,
   &> tbody > tr > td:first-child {
